# library_platform

./: .gitignore  pyproject.toml
library_platform/: manage.py  requirements.txt
library_platform/books/: admin.py  apps.py  filtres.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
library_platform/core/: context_processors.py  urls.py  views.py
library_platform/library_platform/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
library_platform/static/css/: style.css
library_platform/static/js/: main.js
library_platform/templates/base/: base.html
library_platform/templates/core/: about.html  accessibility.html  contact.html  home.html
