[project]
name = "library-platform"
version = "0.1.0"
description = "une bibliotheque nouvelle generation"
authors = [
    {name = "heidi bongolo"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
